<resources>
    <string name="app_name">Kiosk Browser</string>
    <string name="not_device_owner">You are not device owner</string>
    <string name="device_owner">You are admin!</string>
    <string name="stop_lock_task">Stop lock task</string>
    <string name="start_lock_task">Start lock task</string>
    <string name="install">Crash App</string>
    <string name="url">Web URL</string>
    <string name="web_view_start">Start WebView</string>
</resources>
